[package]
name = "hardback_conrod"
version = "0.1.0"
authors = ["alanpoon"]

[dependencies]
conrod = { git ="https://github.com/alanpoon/conrod.git", features = ["glium","winit"]}
conrod_derive = "0.1.0"
futures ={ version = "0.1.14", features=["use_std"] }
cardgame_widgets = {git ="https://github.com/alanpoon/cardgame_widgets.git"}
cardgame_macros = {git="https://github.com/alanpoon/cardgame_macros.git"}
hardback_meta = {git = "https://github.com/alanpoon/hardback_meta.git"}
hardback_codec = {git = "https://github.com/alanpoon/hardback_codec.git"}
websocket = { version ="0.20.2",optional = true}
tokio-core ="0.1.9"
serde_json = "1.0"
glium = { version = "0.19"}
shared_library = "0.1.7"
image = "0.15.0"
rodio = "0.5.2"

[features]
_ws = ["websocket"]
backend_glium_winit = []
default = ["backend_glium_winit","_ws"]

[dev-dependencies]
image = "0.15.0"
find_folder = "0.3.0"

[lib]
name = "hardback_conrod"
path = "src/lib.rs"

[[bin]]
name = "hardback"
path = "src/bin/main.rs"

[package.metadata.android]
package_name = "com.github.apoon1.hardback"
label = "hardback"
android_version = 19
build_targets = ["armv7-linux-androideabi"]
assets = "assets"
fullscreen = true

[package.metadata.android.activity_attributes]
"android:screenOrientation" = "landscape"
"android:uiOptions" = "none"
"android:configChanges" = "keyboardHidden|orientation|screenSize‌​"

[target.'cfg(target_os="linux")'.dependencies]
find_folder = "0.3.0"
conrod_chat = {git ="https://github.com/alanpoon/conrod_chat.git", features=["web_socket","backend_glium_winit"]}

[target.'cfg(target_os="android")'.dependencies]
android_glue = "0.2.3"
rusttype = "*"