[package]
name = "hardback_conrod"
version = "0.1.0"
authors = ["alanpoon"]

[dependencies]
conrod_core = { path ="../conrod/conrod_core"}
conrod_derive = { path = "../conrod/conrod_derive"}
conrod_keypad = {path="../Conrod_KeyPad",optional=true}
conrod_crayon = {path ="../conrod/backends/conrod_crayon"}
crayon  = {path = "../wasm/crayon"}
crayon-audio  = {path = "../wasm/crayon/modules/audio"}
crayon_bytes  = {path = "../wasm/crayon/modules/bytes"}
futures ={ version = "0.1.14", features=["use_std"] }
cardgame_widgets = {path ="../cardgame_widgets"}
cardgame_macros = {path ="../cardgame_macros"}
hardback_meta = {git = "https://github.com/alanpoon/hardback_meta.git"}
hardback_codec = {git = "https://github.com/alanpoon/hardback_codec.git"}
websocket = { version ="0.20.2",optional = true}
tokio-core ="0.1.9"
serde_json = "1.0"
glium = { version = "0.22"}
shared_library = "0.1.7"
image = "0.15.0"
rodio = "0.5.2"
android_glue = {version ="0.2.3",optional = true}
rusttype = {version = "0.5.0", optional =true}
find_folder = {version = "0.3.0",optional = true}
conrod_chat = {path ="../conrod_chat"}
chrono = "0.4"

[features]
_ws = ["websocket"]
android = ["_ws","android_glue","rusttype"]
default = ["_ws","find_folder"]

[dev-dependencies]
image = "0.15.0"
find_folder = "0.3.0"

[lib]
name = "hardback_conrod"
path = "src/lib.rs"

[[bin]]
name = "hardback"
path = "src/bin/main.rs"

[package.metadata.android]
package_name = "com.github.apoon1.hardback"
label = "hardback"
android_version = 18
target_sdk_version = 18
min_sdk_version = 18
build_targets = ["arm-linux-androideabi"]
assets = "assets"
fullscreen = true

[package.metadata.android.activity_attributes]
"android:screenOrientation" = "sensorLandscape"
"android:uiOptions" = "none"