[package]
name = "hardback_conrod"
version = "0.1.0"
authors = ["alanpoon"]

[dependencies]
conrod_core = { path ="../conrod/conrod_core"}
conrod_derive = { path = "../conrod/conrod_derive"}
conrod_keypad = {path="../Conrod_KeyPad",optional=true}
conrod_crayon = {path ="../conrod/backends/conrod_crayon"}
crayon  = {path = "../wasm/crayon"}
crayon-audio  = {path = "../wasm/crayon/modules/audio"}
crayon_bytes  = {path = "../wasm/crayon/modules/bytes"}
cardgame_widgets = {path ="../cardgame_widgets"}
cardgame_macros = {path ="../cardgame_macros"}
hardback_meta = {git = "https://github.com/alanpoon/hardback_meta.git"}
hardback_codec = {path = "../hardback_codec"}
serde_json = "1.0"
image = "0.15.0"
rodio = "0.5.2"
android_glue = {version ="0.2.3",optional = true}
rusttype = {version = "0.5.0", optional =true}
conrod_chat = {path ="../conrod_chat"}
instant =  {path="../wasm/instant", version="0.1.1", features = [ "wasm-bindgen","now" ]}
chrono = {path="../wasm/chrono",features=["clock"]}
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.47"


[features]
android = ["android_glue","rusttype"]
default = []

[lib]
name = "hardback_conrod"
path = "src/lib.rs"

[[bin]]
name = "hardback"
path = "src/bin/main.rs"

[package.metadata.android]
package_name = "com.github.apoon1.hardback"
label = "hardback"
android_version = 18
target_sdk_version = 18
min_sdk_version = 18
build_targets = ["arm-linux-androideabi"]
assets = "assets"
fullscreen = true

[package.metadata.android.activity_attributes]
"android:screenOrientation" = "sensorLandscape"
"android:uiOptions" = "none"